# pcomjr-spec

./: .gitignore  INTEGRATION-2.md  LICENSE  README-3.md  README.md  SPEC.md  constraints.test.ts  constraints.ts  gitignore  index-2.ts  index.ts  oias-constraints.test.ts  oias-constraints.ts  oias-types.ts  package-2.json  package-lock.json  package.json  pcomjr-context.jsonld  pcomjr-types.ts  terminal-registry.json  tsconfig.json
fixtures/: hash-vectors.json
ontology/: package-lock.json  package.json  tsconfig.json
ontology/scripts/: generate.ts
ontology/src/: constraints.ts  hash.ts  index.ts
ontology/test/: constraints.test.ts  verify-hash-vectors.ts
python/: README.md  pyproject.toml
python/scripts/: generate.py
python/talonsight_ontology/: __init__.py  constraints.py  hash.py
python/tests/: test_constraints.py  test_hash.py  test_models.py
schema/: pcomjr.schema.json
