[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talonsight-ontology"
version = "0.1.0"
description = "PCOMJR Data Ontology — shared type system for TalonSight Technologies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jermaine Nelson", email = "jermaine@talonsight.dev" },
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["talonsight_ontology"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
